--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,26 @@ header {
     margin: 0 1vw;
 }
 
+#desktopmenu{
+    display:block;
+}
+
+#mobilemenu{
+    display: none;
+    margin-right: 1vw;
+}
+
+#dropdownmenu{
+    display: flex;
+    height: 0px;
+    width: 90%;
+    justify-content: center;
+    transition: all 0.5s ease;
+    overflow: hidden;
+}
+
+
+
 main{
     width:80%;
     margin: 2% auto;
@@ -77,7 +97,7 @@ section{
 }
 
 .location{
-    height: 500px;
+    min-height: 500px;
     background-image: url(./resources/images/img-locations-background.jpeg);
 }
 
@@ -93,6 +113,7 @@ section{
     justify-content: center;
     align-items: center;
     align-content: center;
+    flex-wrap: wrap;
 }
 
 .locationcard{
